--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -18,7 +18,7 @@ bar across the top of the page...
       <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
          <button ngbDropdownItem routerLink="/standingorders">Standing Orders</button>
          <button ngbDropdownItem routerLink="/transferaccounts">Transfer Accounts</button>
-         <button ngbDropdownItem routerLink="/">Account details (to come)</button>
+         <button ngbDropdownItem routerLink="/accounts">Account details</button>
          <button ngbDropdownItem routerLink="/">Extracts aka. Search (eventually)</button>
       </div>
     </li>  
