--- a/account.ui/src/app/accounts/accounts.component.html
+++ b/account.ui/src/app/accounts/accounts.component.html
@@ -1,1 +1,43 @@
-<p>I will be a list of accounts!</p>
+<!-- src/app/accounts/accounts.component.html -->
+<div class="container-fluid">
+   <div class="row">
+      <div class="col text-start">
+       <h3>Accounts</h3>
+      </div>
+      <div class="col text-end">
+       <button class="btn btn-secondary bi bi-plus-square" (click)="addAccount()"></button>
+      </div>
+   </div>
+</div>
+
+<div class="accountlist table-responsive" *ngIf="isAccounts()">
+   <table class="table table-striped table-sm">
+      <thead class="thead-inverse">
+         <tr><th>Name</th><th>Address</th><th>Code</th><th>Currency</th><th>Format</th>
+            <th>Statement</th>
+            <th>BIC</th>
+            <th>Telephone</th>
+            <th>StatementRef</th>
+            <th>Order</th> 
+            <th class="account-edit"></th></tr>
+      </thead>
+      <tbody>
+         <tr *ngFor="let ta of accounts">
+            <td class="">{{ta.name}}</td>
+            <td class="nowrap">{{ta.address}}</td>
+            <td>{{ta.code}}</td>
+            <td>{{ta.currency}}</td>
+            <td>{{ta.format}}</td>
+            <td>{{ta.statement}}</td>
+            <td>{{ta.bic}}</td>
+            <td>{{ta.telephone}}</td>
+            <td>{{ta.statementref}}</td>
+
+            <td>{{ta.order}}</td>
+            <td class="account-edit">
+               <button class="acc-table-btn" (click)="editAccount(ta)"><i class="bi bi-pencil-square"></i></button>
+            </td>
+         </tr>
+      </tbody>
+   </table>
+</div>
