Account details management

--- a/account.ui/src/app/account-edit-mat/account-edit-mat.component.html
+++ b/account.ui/src/app/account-edit-mat/account-edit-mat.component.html
@@ -18,59 +18,49 @@
                  <input matInput placeholder="" formControlName="address">
               </mat-form-field>
             </div>
-           <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
+         </div>
+         <div class="row">
+            <div class="col">
+               <mat-form-field  appearance="outline">
                  <mat-label>Code</mat-label>
                  <input matInput placeholder="" formControlName="code">
                </mat-form-field>
             </div>
+            <div class="col">
+               <mat-form-field  appearance="outline">
+                 <mat-label>Telephone</mat-label>
+                 <input  matInput placeholder="" formControlName="telephone">
+               </mat-form-field>                
+            </div>
          </div>
          <div class="row">
             <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
+               <mat-form-field  appearance="outline" >
                   <mat-label>Currency</mat-label>
                   <input matInput placeholder="" formControlName="currency">
                </mat-form-field>
             </div>
             <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
+               <mat-form-field  appearance="outline">
                   <mat-label>Format</mat-label>
                   <input matInput placeholder="" formControlName="format">
                </mat-form-field>
-            </div>         
+            </div> 
+         </div>
+         <div class="row">              
             <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
+               <mat-form-field  appearance="outline" >
+                  <mat-label>Statement Ref</mat-label>
+                  <input matInput placeholder="" formControlName="statementref">
+               </mat-form-field>                
+            </div>                    
+            <div class="col">
+               <mat-form-field  appearance="outline">
                   <mat-label>Order</mat-label>
                   <input type="number" matInput placeholder="" formControlName="order">
                </mat-form-field>                
             </div>
         </div>
-        <div class="row">
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>Statement</mat-label>
-               <input matInput placeholder="" formControlName="statement">
-            </mat-form-field>
-         </div>
-         <div class="col">
-            <mat-form-field  appearance="outline" class="full-width">
-               <mat-label>BIC</mat-label>
-               <input matInput placeholder="" formControlName="bic">
-            </mat-form-field>
-         </div>         
-            <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
-                 <mat-label>Telephone</mat-label>
-                 <input type="number" matInput placeholder="" formControlName="telephone">
-               </mat-form-field>                
-            </div>
-           <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
-                  <mat-label>statementref</mat-label>
-                  <input type="number" matInput placeholder="" formControlName="statementref">
-               </mat-form-field>                
-            </div>           
-         </div>        
       </mat-card-content>
       <mat-card-actions>
          <div class="actions-card-left">
