dont wrap amounts

--- a/account.ui/src/app/transferaccounts/transferaccounts.component.html
+++ b/account.ui/src/app/transferaccounts/transferaccounts.component.html
@@ -21,7 +21,7 @@
             <td class="nowrap">{{ta.cptyAccountNumber}}</td>
             <td>{{ta.lastCommunication}}</td>
             <td>{{ta.order}}</td>
-            <td>{{ta.relatedAccountName}}</td>
+            <td class="nowrap">{{ta.relatedAccountName}}</td>
             <td class="account-edit">
                <button class="acc-table-btn" (click)="editTransferAccount(ta)"><i class="bi bi-pencil-square"></i></button>
             </td>
