--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -35,7 +35,7 @@
    </div>
 </ng-template>   
 
-<div class="transactions" *ngIf="isTransactions()">
+<div class="transactions" *ngIf="isAccount()">
    <div class="text-center d-flex w-100 title">
       <div class="d-flex flex1 title-left">
          <div class="d-flex flex-column">
@@ -43,10 +43,10 @@
             <div class="title-text">{{activeaccount.name}}</div>
          </div>
       </div>
-      <div *ngIf="desktopDisplay" class="d-flex flex1 align-self-center justify-content-center title-center">
+      <div *ngIf="desktopDisplay && isTransactions()" class="d-flex flex1 align-self-center justify-content-center title-center">
          <ng-container *ngTemplateOutlet="pageingTemplate"></ng-container>
       </div>
-      <div class="d-flex flex1 justify-content-right align-self-center title-right">
+      <div *ngIf="isTransactions()" class="d-flex flex1 justify-content-right align-self-center title-right">
          <span *ngIf="inprogress" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
          <button *ngIf="checkTransaction" class="btn btn-outline-success btn-sm" (disabled)="checkLoading" (click)="calcCheckedBalance()" title="checked balance">
             <div *ngIf="!checkLoading">
@@ -61,8 +61,9 @@
          <button class="btn btn-outline-success btn-sm" [routerLink]="['/viewchecked', activeaccount.id]" title="view checked list">
             <i class="bi bi-list-check"></i>
          </button>
-      </div>      
+      </div>  
    </div>
+   <div *ngIf="isTransactions()">
    <table class="table table-striped table-sm">
       <thead class="thead-inverse">
          <tr>
@@ -94,9 +95,10 @@
    <div class="text-center text-md-left pb-2">
       <ng-container *ngTemplateOutlet="pageingTemplate"></ng-container>
    </div>  
+   </div>
 </div>
 
-<div id="txncontainer" *ngIf="isTransactions()">
+<div id="txncontainer" *ngIf="isAccount()">
    <div id="qrreadercontainer">
      <div id="reader" class="reader" width="300px"></div>
    </div>
