format future rows

--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -77,7 +77,10 @@
          </tr>
       </thead>
       <tbody>
-         <tr *ngFor="let txn of transactions" [ngClass]="{'table-success': txn.locked}">
+         <tr *ngFor="let txn of transactions" [ngClass]="{
+            'table-success': txn.locked,
+            'table-primary': isFuture(txn)
+         }">
             <td class="nowrap">{{formatDateColumn(txn.date)}}</td>
             <td *ngIf="desktopDisplay">{{txn.type}}</td>
             <td (swipeleft)="open(content, txn)">{{txn.comment}}</td>
