show tomorrow, manual entry bug fix

--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -77,10 +77,7 @@
          </tr>
       </thead>
       <tbody>
-         <tr *ngFor="let txn of transactions" [ngClass]="{
-            'table-success': txn.locked,
-            'table-primary': isFuture(txn)
-         }">
+         <tr *ngFor="let txn of transactions" [ngClass]="rowClasses(txn)">
             <td class="nowrap">{{formatDateColumn(txn.date)}}</td>
             <td *ngIf="desktopDisplay">{{txn.type}}</td>
             <td (swipeleft)="open(content, txn)">{{txn.comment}}</td>
