--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.html
@@ -86,7 +86,7 @@
             <div class="actions-card-left">
                @if(canDelete())
                {
-                  <button mat-flat-button class="warning" type="reset" (click)="onDelete()">
+                  <button mat-flat-button class="mat-error" type="reset" (click)="onDelete()">
                      <span><mat-icon class="deleteicon" fontSet="material-symbols-rounded">delete</mat-icon></span>
                   </button>
                }
