--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -43,7 +43,7 @@
             <div class="title-text">{{activeaccount.name}}</div>
          </div>
       </div>
-      <div *ngIf="desktopDisplay && isTransactions()" class="d-flex flex1 align-self-center justify-content-center title-center">
+      <div *ngIf="landscapeDisplay && isTransactions()" class="d-flex flex1 align-self-center justify-content-center title-center">
          <ng-container *ngTemplateOutlet="pageingTemplate"></ng-container>
       </div>
       <div *ngIf="isTransactions()" class="d-flex flex1 justify-content-right align-self-center title-right">
@@ -68,22 +68,22 @@
       <thead class="thead-inverse">
          <tr>
            <th>Date</th>
-           <th *ngIf="desktopDisplay">Type</th>
+           <th *ngIf="landscapeDisplay">Type</th>
            <th>Memo</th>
-           <th *ngIf="desktopDisplay">Ref</th>
+           <th *ngIf="landscapeDisplay">Ref</th>
            <th class="account-amount">Amount</th>
-           <th class="account-amount" *ngIf="desktopDisplay">Balance</th>
+           <th class="account-amount" *ngIf="landscapeDisplay">Balance</th>
            <th class="account-edit" *ngIf="desktopDisplay"></th>
          </tr>
       </thead>
       <tbody>
          <tr *ngFor="let txn of transactions" [ngClass]="rowClasses(txn)">
             <td class="nowrap">{{formatDateColumn(txn.date)}}</td>
-            <td *ngIf="desktopDisplay">{{txn.type}}</td>
+            <td *ngIf="landscapeDisplay">{{txn.type}}</td>
             <td (swipeleft)="open(content, txn)">{{txn.comment}}</td>
-            <td class="nowrap" *ngIf="desktopDisplay">{{txn.statementref}}</td>
+            <td class="nowrap" *ngIf="landscapeDisplay">{{txn.statementref}}</td>
             <td class="account-amount" [ngClass]="{'account-negamount': txn.amount.startsWith('-')}">{{txn.amountfmtd}}</td>
-            <td class="account-amount" [ngClass]="{'account-negbalance': txn.balance.startsWith('-')}" *ngIf="desktopDisplay">{{txn.balance}}</td>
+            <td class="account-amount" [ngClass]="{'account-negbalance': txn.balance.startsWith('-')}" *ngIf="landscapeDisplay">{{txn.balance}}</td>
             <td class="account-edit" *ngIf="desktopDisplay">
                <button class="acc-table-btn" type="button" (click)="open(content, txn)" title="edit">
                   <i class="bi bi-pencil-square" aria-hidden="true"></i>
