--- a/account.ui/src/app/standingorders/standingorders.component.html
+++ b/account.ui/src/app/standingorders/standingorders.component.html
@@ -22,7 +22,7 @@
        <td class="account-amount">{{so.soamount}}</td>
        <td>{{so.sodesc}}</td>
        <td>{{so.accountname}}</td>
-       <td>{{so.soperiod}}</td>
+       <td>{{so.period}}</td>
        <td>{{so.socount}}</td>
        <td>{{so.sotfrtype}}</td>
        <td>
