--- a/account.ui/src/app/standingorder-editor/standingorder-editor.component.html
+++ b/account.ui/src/app/standingorder-editor/standingorder-editor.component.html
@@ -48,9 +48,9 @@
         </div>
         
         <div class="row align-items-center">
-         <label class="col-sm-1 col-form-label-sm" for="soperiod">Period: </label>
+         <label class="col-sm-1 col-form-label-sm" for="period">Period: </label>
          <div class="col-sm-10">        
-                <input class="form-control form-control-sm" id="soperiod" type="text" formControlName="soperiod">
+                <input class="form-control form-control-sm" id="period" type="text" formControlName="period">
             </div>
         </div>
         
